# oai_kpa_mpp

./: .gitignore  CHANGELOG.md  README.md  __main__.py  pyproject.toml
.github/workflows/: main.yaml
cfg/: oai_kpa_stm.json
log/2021_01_28 oai_kpa_stm/: 2021_01_28 08-02-55 oai_kpa_stm .csv  2021_01_28 08-07-55 oai_kpa_stm .csv  2021_01_28 08-12-14 oai_kpa_stm .csv  2021_01_28 08-31-53 oai_kpa_stm .csv
oai_kpa_mpp/: __init__.py  oai_kpa_mpp.py  oai_kpa_mpp_impact.py  oai_kpa_mpp_test.py  oai_kpa_mpp_widget_qt.py  oai_kpa_mpp_widget_qt.ui  oia_kpa_mpp_data.py  uiconverter.bat
oai_kpa_stm/: oai_kpa_mpp.py  oai_kpa_mpp_test.py  oai_kpa_mpp_widget_qt.py  oai_kpa_mpp_widget_qt.ui  oia_kpa_mpp_data.py  uiconverter.bat
